tests/js_error/source_locations/expression/assign/set_super_property.js
class B {
  set foo(_) {
    throw new Error()
  }
}

class C extends B {
  test() {
    super.foo = 2;
  }
}

var c = new C();
c.test();